--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col"><a href="index.html" class="nav-item-active">Inicio</a></div>
+        <div class="col">
+          <a href="index.html" class="nav-item-active">Inicio</a>
+        </div>
 
         <div class="col">
           <a href="menu.html" class="nav-item-active">Carta</a>
@@ -27,7 +29,39 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input class="form-control" type="text" />
+        </div>
+        <div class="col">
+          <label for="apellido" class="form-label">Apellido</label>
+          <input class="form-control" type="text" />
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="col">
+          <label for="email" class="form-label">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="col">
+          <label for="comentario" class="form-label">Comentanos</label>
+          <textarea
+            class="form-control"
+            id="comentario"
+            rows="3"
+            placeholder="Escribe tu comentario aquí. . . "
+          ></textarea>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
