--- a/index.html
+++ b/index.html
@@ -14,20 +14,37 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col"><a href="#" class="nav-item-active">Inicio</a></div>
-
-        <div class="col">
-          <a href="menu.html" class="nav-item-active">Carta</a>
-        </div>
-
-        <div class="col">
-          <a href="contact.html" class="nav-item-active">Contacto</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(90, 69, 69, 0.845);">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">coloca logo</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Carta
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+              <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contacto</a>
+            </li>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-
+    </nav>
+<h1>CAFE</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
