--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,21 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(90, 69, 69, 0.845);">
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: rgba(90, 69, 69, 0.845)"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">coloca logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -25,20 +36,26 @@
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Home</a>
             </li>
-            
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Carta
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-              <li class="nav-item">
+
+            < class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="menu.html"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Carta
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+            <li class="nav-item">
               <a class="nav-link" href="#">Contacto</a>
-            </li>
             </li>
           </ul>
         </div>
@@ -47,49 +64,59 @@
 
     <div class="container">
       <div class="formulario">
-      <div class="row">
-        <div class="col-sm-6">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input class="form-control" type="text" />
+        <div class="row">
+          <div class="col-sm-6">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input class="form-control" type="text" />
+          </div>
+          <div class="col-sm-6">
+            <label for="apellido" class="form-label">Apellido</label>
+            <input class="form-control" type="text" />
+          </div>
         </div>
-        <div class="col-sm-6">
-          <label for="apellido" class="form-label">Apellido</label>
-          <input class="form-control" type="text" />
+
+        <div class="row">
+          <div class="col">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="name@example.com"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="comentario" class="form-label">Comentanos</label>
+            <textarea
+              class="form-control"
+              id="comentario"
+              rows="4"
+              placeholder="Escribe tu comentario aquí. . . "
+            ></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="Check" />
+              <label class="form-check-label" for="Check"
+                >He leído y acepto la<button type="button" class="btn btn-link">
+                  Politica de Privacidad.</button
+                >*
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <button type="button" class="btn btn-outline-info">Enviar</button>
+          </div>
         </div>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="col">
-          <label for="email" class="form-label">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            placeholder="name@example.com"
-          />
-        </div></div>
-        <div class="row">
-        <div class="col">
-          <label for="comentario" class="form-label">Comentanos</label>
-          <textarea
-            class="form-control"
-            id="comentario"
-            rows="4"
-            placeholder="Escribe tu comentario aquí. . . "
-          ></textarea>
-        </div></div>
-        <div class="row">
-        <div class="col"> <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="Check">
-          <label class="form-check-label" for="Check">
-            He leído y acepto la Politica de Privacidad.*
-          </label></div>
-        </div> </div>
-        <div class="row">
-        <div class="col"><button type="button" class="btn btn-outline-info">Enviar</button></div></div>
-    </div>
-    </div>
-    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
