integracion de icono home, diseño de pagina home con img y cards

--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light"
+      class="navbar navbar-expand-sm navbar-light"
       style="background-color: rgba(90, 69, 69, 0.845)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">coloca logo</a>
+        <a class="navbar-brand" href="index.html"><img src="multimedia/logoBlanco.jpg" alt="Foto café" width="50px"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,23 +37,26 @@
               <a class="nav-link active" href="index.html">Home</a>
             </li>
 
-            < class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="menu.html"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Carta
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="menu.html"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Carta
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contacto</a>
             </li>
@@ -62,8 +65,8 @@
       </div>
     </nav>
 
-    <div class="container">
-      <div class="formulario">
+    <div class="container d-flex justify-content-center align-items-center">
+      <div class="form">
         <div class="row">
           <div class="col-sm-6">
             <label for="nombre" class="form-label">Nombre</label>
@@ -109,6 +112,7 @@
             </div>
           </div>
         </div>
+
         <div class="row">
           <div class="col">
             <button type="button" class="btn btn-outline-info">Enviar</button>
