--- a/menu.html
+++ b/menu.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light"
+      class="navbar navbar-expand-sm navbar-light"
       style="background-color: rgba(90, 69, 69, 0.845)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">coloca logo</a>
+        <a class="navbar-brand" href="index.html"><img src="multimedia/logoBlanco.jpg" alt="Foto café" width="50px"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,7 +37,7 @@
               <a class="nav-link active" href="index.html">Home</a>
             </li>
 
-            < class="nav-item dropdown">
+            <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
               href="menu.html"
@@ -54,6 +54,7 @@
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contacto</a>
             </li>
