--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light"
+      class="navbar navbar-expand-sm navbar-light"
       style="background-color: rgba(90, 69, 69, 0.845)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">coloca logo</a>
+        <a class="navbar-brand" href="#"
+          ><img src="multimedia/logoBlanco.jpg" alt="Foto café" width="50px"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,23 +39,26 @@
               <a class="nav-link active" href="#">Home</a>
             </li>
 
-            < class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="menu.html"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Carta
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="menu.html"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Carta
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contacto</a>
             </li>
@@ -61,7 +66,28 @@
         </div>
       </div>
     </nav>
-    <h1>CAFE</h1>
+    <div class="card bg-dark text-white">
+      <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo">
+      <div class="card-img-overlay">
+        <h1 class="card-title">Brew Coffee</h1>
+        <p class="card-text"> Es un espacio para disfrutar de bebidas a base principalmente de café y diversos tipos de infusiones, así como postres.</p>
+      </div></div>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">café</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+   
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
