finalización de pagina home, agredado primer producto de la carta

--- a/index.html
+++ b/index.html
@@ -39,25 +39,8 @@
               <a class="nav-link active" href="#">Home</a>
             </li>
 
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="menu.html"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Carta
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">Carta</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contacto</a>
@@ -72,20 +55,32 @@
         <h1 class="card-title">Brew Coffee</h1>
         <p class="card-text"> Es un espacio para disfrutar de bebidas a base principalmente de café y diversos tipos de infusiones, así como postres.</p>
       </div></div>
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-6" style="max-width: 540px;">
         <div class="row g-0">
-          <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
+          <div class="col-sm-3">
+            <img src="multimedia/latteart.png" class="img-fluid rounded-start" alt="...">
           </div>
-          <div class="col-md-8">
+          <div class="col-sm-9">
             <div class="card-body">
-              <h5 class="card-title">café</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <h5 class="card-title">Café Latte Art</h5>
+              <p class="card-text">Aprecia técnicas que utiliza los baristas para la realización de patrones y dibujos en la superficie del café. El diseño emerge en la medida en la que la crema emulsionada de la leche entra en contacto con el café. Los baristas suelen utilizar esta técnica para decorar los cafés que preparan.</p>
+              <p class="card-text"><small class="text-muted">disfruta de momentos . . .</small></p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="container-fluid">
+        <div class="row p-3 bg-secondary text-white display-flex justify-content-center">
+        <div class="col-xs-12 col-md-6 col-lg-3">
+        <p class="h5">Ubícanos</p>
+        <div class="mb-2"><a class="btn btn-primary" href="https://goo.gl/maps/uzdoVVruKA7JLUk58" role="button">Brew Coffee</a></div>
+      <div class="mb-2"><a class="btn btn-primary" href="https://goo.gl/maps/3kHPcAhQUwGnwMfr7" role="button">Brew Coffee Urquinaona</a></div></div>
+        <div class="col-xs-12 col-md-6 col-lg-3"></div>
+        <p>columna</p>
+        <div class="col-xs-12 col-md-6 col-lg-3"></div>
+        <p>columna</p>
+     </div> </div>
    
 
 
