--- a/menu.html
+++ b/menu.html
@@ -37,23 +37,8 @@
               <a class="nav-link active" href="index.html">Home</a>
             </li>
 
-            <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="menu.html"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Carta
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">Carta</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contacto</a>
@@ -62,7 +47,37 @@
         </div>
       </div>
     </nav>
+
+
+  
     <h1>Menu</h1>
+
+    <div class="card-group">
+      <div class="card">
+        <img src="multimedia/tematcha.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Prueba infuciones exóticas</h5>
+          <p class="card-text">Disfruta del Té Macha Japones con leche fresca.</p>
+          <p class="card-text"><small class="text-muted">Perfecto para los dias de calor</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
