aplicacion font-family, backgrand, arreglos del diseño

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="card bg-dark text-white">
       <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo">
       <div class="card-img-overlay">
-        <h1 class="card-title">Brew Coffee</h1>
-        <p class="card-text"> Es un espacio para disfrutar de bebidas a base principalmente de café y diversos tipos de infusiones, así como postres.</p>
+        <h1 class="card-title titulohome letter" >Brew Coffee</h1>
+        <p class="card-text titulohome letter"> Es un espacio para disfrutar de bebidas a base principalmente de café y diversos tipos de infusiones, así como postres.</p>
       </div></div>
       <div class="card mb-6" style="max-width: 540px;">
         <div class="row g-0">
@@ -62,26 +62,13 @@
           </div>
           <div class="col-sm-9">
             <div class="card-body">
-              <h5 class="card-title">Café Latte Art</h5>
-              <p class="card-text">Aprecia técnicas que utiliza los baristas para la realización de patrones y dibujos en la superficie del café. El diseño emerge en la medida en la que la crema emulsionada de la leche entra en contacto con el café. Los baristas suelen utilizar esta técnica para decorar los cafés que preparan.</p>
-              <p class="card-text"><small class="text-muted">disfruta de momentos . . .</small></p>
+              <h5 class="card-title letter">Café Latte Art</h5>
+              <p class="card-text letter">Aprecia técnicas que utiliza los baristas para la realización de patrones y dibujos en la superficie del café. El diseño emerge en la medida en la que la crema emulsionada de la leche entra en contacto con el café. Los baristas suelen utilizar esta técnica para decorar los cafés que preparan.</p>
+              <p class="card-text letter"><small class="text-muted">disfruta de momentos . . .</small></p>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="container-fluid">
-        <div class="row p-3 bg-secondary text-white display-flex justify-content-center">
-        <div class="col-xs-12 col-md-6 col-lg-3">
-        <p class="h5">Ubícanos</p>
-        <div class="mb-2"><a class="btn btn-primary" href="https://goo.gl/maps/uzdoVVruKA7JLUk58" role="button">Brew Coffee</a></div>
-      <div class="mb-2"><a class="btn btn-primary" href="https://goo.gl/maps/3kHPcAhQUwGnwMfr7" role="button">Brew Coffee Urquinaona</a></div></div>
-        <div class="col-xs-12 col-md-6 col-lg-3"></div>
-        <p>columna</p>
-        <div class="col-xs-12 col-md-6 col-lg-3"></div>
-        <p>columna</p>
-     </div> </div>
-   
 
 
     <script
