--- a/menu.html
+++ b/menu.html
@@ -49,32 +49,32 @@
     </nav>
 
 
-  
-    <h1>Menu</h1>
+  <div class="carta">
+    <h1>Carta</h1></div>
 
     <div class="card-group">
       <div class="card">
         <img src="multimedia/tematcha.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Prueba infuciones exóticas</h5>
-          <p class="card-text">Disfruta del Té Macha Japones con leche fresca.</p>
-          <p class="card-text"><small class="text-muted">Perfecto para los dias de calor</small></p>
+          <h5 class="card-title letter">Prueba infuciones exóticas</h5>
+          <p class="card-text letter">Disfruta del Té Macha Japones con leche fresca.</p>
+          <p class="card-text letter"><small class="text-muted">Perfecto para los dias de calor</small></p>
         </div>
       </div>
       <div class="card">
         <img src="multimedia/americano.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Café Amenicano</h5>
-          <p class="card-text">Si eres de bebidas mas tracionales, te recomendamos el clasico Café americano, un expreso diluido en un mayor porcentaje de agua.</p>
-          <p class="card-text"><small class="text-muted">Perfecto si no te gustan los sabores fuertes</small></p>
+          <h5 class="card-title letter">Café Amenicano</h5>
+          <p class="card-text letter">Si eres de bebidas mas tracionales, te recomendamos el clasico Café americano, un expreso diluido en un mayor porcentaje de agua.</p>
+          <p class="card-text letter"><small class="text-muted">Perfecto si no te gustan los sabores fuertes</small></p>
         </div>
       </div>
       <div class="card">
         <img src="multimedia/postre.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Cookies</h5>
-          <p class="card-text">Puedes acompañar tus bebidas con cookies de variedad de sabores y colores.</p>
-          <p class="card-text"><small class="text-muted">El acompañante ideal</small></p>
+          <h5 class="card-title letter">Cookies</h5>
+          <p class="card-text letter">Puedes acompañar tus bebidas con cookies de variedad de sabores y colores.</p>
+          <p class="card-text letter"><small class="text-muted">El acompañante ideal</small></p>
         </div>
       </div>
     </div>
