--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="col-sm-3 col-md-4 text-center footer">
          <div> Contacto
-          <div>
+          <div class="iconos">
             <i class="bi bi-instagram"></i>
             <i class="bi bi-envelope"></i>
             <i class="bi bi-telephone"></i>
