--- a/menu.html
+++ b/menu.html
@@ -51,12 +51,12 @@
       </div>
     </nav>
 
-    <div class="carta">
+    <div class="titulo-carta">
       <h1>Carta</h1>
     </div>
 
     <div class="container g-3">
-      <div class="row">
+      <div class="row g-2">
         <div class="col-sm-6 col-md-4">
           <div class="card-group">
             <div class="card h-100">
